# AtlasSampler

./: .gitignore  LICENSE  README.md  pyproject.toml
adsampler/: __init__.py  cmdstanpy_wrapper.py  hessians.py  hmc.py  stepadapt_samplers.py  util.py  uturn_samplers.py
adsampler/algorithms/: adsampler.py  hmc.py  stepadapt_samplers.py  uturn_samplers.py
atlassampler/: __init__.py  diagnostics_utils.py  diagnostics_utils_jax.py  distributions.py  hessians.py  util.py  wrappers.py
atlassampler/algorithms/: .#hmc.py  adapt_and_delay.py  atlas.py  atlas_alt.py  atlasv2.py  atlasv2_prop.py  hmc.py  (+7 more)
experiments/: atlas.py  compare_atlas_nuts.py  compare_atlashmc.py  compare_atlasnuts.py  compare_atlasnuts2.py  compare_atlasnuts2prop.py  compare_atlasnuts3.py  compare_atlasnuts_deprecated.py  compare_atlasuturn.py  compare_drhmc.py  compare_drhmc_nout.py  compare_nuts.py  compare_stepadapt.py  compare_stepadapt_dr.py  compare_stepadapt_nodr.py  compare_uturn.py  default_args.py  example.py  example2.py  gen_reference_samples.py  job.sh  job_atlas.sh  job_atlashmc.sh  job_atlasnuts.sh  job_atlasnuts2.sh  job_atlasnuts2prop.sh  job_atlasnuts2proprank.sh  job_atlasnutsdeprecated.sh  job_atlasnutstest.sh  job_atlasuturn.sh  job_drhmc_nout.sh  job_nuts.sh  job_nutscompare.sh  job_stepadapt.sh  job_stepadapt_nodr.sh  job_uturn.sh  models.py  normal_origin.py  nuts.py  plotting.py  (+2 more)
notebooks/: Example.ipynb  Untitled.ipynb  paper-figs-Copy1.ipynb  paper-figs.ipynb
stan/: eight_schools_centered.stan  funnel2.data.json  multifunnel.stan  normal.data.json  rosenbrock.data.json
